--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,3 +1,5 @@
-scripts:
-  - name: Build for iOS
-  script: expo run:ios
+workflows:
+  build-ios:
+    name: Build for iOS
+    scripts:
+      - expo run:ios
